AbsolutelyPositionedItem now supports renderProp wuch supplied the selected alignment Fixed positioning on usePositionedItem Added 'Bubble' display component

--- a/src/css/core.scss
+++ b/src/css/core.scss
@@ -87,6 +87,10 @@ html {
   --border-width: 1px;
   --border-radius: calc(2px * var(--scale));
 
+  --border: var(--border-width) solid var(--c-border);
+
+  --shadow: 1px 1px 2px 0 rgba(0,0,0,0.25);
+
   //defaults
   font: var(--font-bodyNormal);
 }
