--- a/src/css/mixins.scss
+++ b/src/css/mixins.scss
@@ -8,19 +8,19 @@
     border-style: solid;
 
   @if $direction == top {
-    border-width: 0 math.div($sizeH, 2) $sizeV math.div($sizeH, 2);
+    border-width: 0 calc($sizeH / 2) $sizeV calc($sizeH / 2);
     border-color: transparent transparent $color transparent;
   }
   @if $direction == bottom {
-    border-width: $sizeV math.div($sizeH, 2) 0 math.div($sizeH, 2);
+    border-width: $sizeV calc($sizeH / 2) 0 calc($sizeH / 2);
     border-color: $color transparent transparent transparent;
   }
   @if $direction == left {
-    border-width: math.div($sizeV, 2) $sizeH math.div($sizeV, 2) 0;
+    border-width: calc($sizeV / 2) $sizeH calc($sizeV / 2) 0;
     border-color: transparent $color transparent transparent;
   }
   @if $direction == right {
-    border-width: math.div($sizeV, 2) 0 math.div($sizeV, 2) $sizeH;
+    border-width: calc($sizeV / 2) 0 calc($sizeV / 2) $sizeH;
     border-color: transparent transparent transparent $color;
   }
   // @if $direction == topright {
